# HomeWork

./: .coverage  .env.tempalte  pyproject.toml
HomeWork/: log.txt  pyproject.toml
HomeWork/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_logger_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_decorators_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_widget_py.html
HomeWork/src/: decorators.py  generators.py  logger.py  masks.py  processing.py  transaction_reader.py  utils.py  widget.py
HomeWork/tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
src/: README.md  decorators.py  generators.py  logger.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
