[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Sh1ra0ri <xxnon.7@gmail.com>"]
readme = "README.md"
packages = [{ include = "homework" }]
python = ">=3.13"

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line-length = 88

[tool.mypy]
files = "homework"
ignore_missing_imports = true
